--- a/package.json
+++ b/package.json
@@ -7,16 +7,21 @@
     "start-dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "~1.17.1",
+    "connect-mongo": "^1.3.2",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "express-ejs-layouts": "^2.3.1",
+    "express-session": "^1.15.6",
     "mongoose": "^4.11.14",
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "serve-favicon": "~2.4.2"
   }
