--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "~1.17.1",
+    "cloudinary": "^1.9.1",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
@@ -21,6 +22,7 @@
     "mongoose": "^4.11.14",
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
+    "multer-storage-cloudinary": "^2.2.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
